<resources>
    <string name="app_name">Sport Centers</string>
    <string name="tv_messages">Messages</string>
    <string name="tv_write">Write your message</string>
    <string name="tv_log">Here you can see your messages</string>
    <string name="btn_send">Send</string>
    <string name="step_off">Step\nOFF</string>
    <string name="step_on">Step\nON</string>
    <string name="tv_step">Step Detector</string>
    <string name="tv_step_measures">Step detector is OFF</string>
    <string name="step_off_btn">Step\nOFF</string>
    <string name="step_on_btn">Step\nON</string>
    <string name="step_clear">Reset</string>
    <string name="checkB_soccer">Football</string>
    <string name="checkB_tennis">Tennis</string>
    <string name="tv_listofcenters">List of Centers</string>
    <string name="title_activity_maps_sport_centers">MapsSportCenters</string>
    <string name="bt_currentlocation">Current Location</string>
</resources>